[gd_scene load_steps=29 format=2]

[ext_resource path="res://Resources/Styles/styleBoxLineBlack.tres" type="StyleBox" id=1]
[ext_resource path="res://Resources/Styles/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/Icons/dropdown_menu.png" type="Texture" id=3]
[ext_resource path="res://Screens/PrincipalScreen.gd" type="Script" id=4]
[ext_resource path="res://Resources/Styles/SemiBoldFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resources/Icons/reminders.png" type="Texture" id=6]
[ext_resource path="res://Resources/Icons/add_task_list.png" type="Texture" id=7]
[ext_resource path="res://Resources/Styles/NormalDropDownMenuButton.tres" type="StyleBox" id=8]
[ext_resource path="res://Resources/Styles/PressedDropDownButton.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/Styles/HoverDropDownMenuButton.tres" type="StyleBox" id=10]
[ext_resource path="res://Resources/Icons/timer.png" type="Texture" id=11]
[ext_resource path="res://Containers/TasksListContainerPanel.tscn" type="PackedScene" id=12]
[ext_resource path="res://Resources/Fonts/Montserrat-SemiBold.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://Resources/Styles/FocusButton.tres" type="StyleBox" id=15]
[ext_resource path="res://Resources/Styles/PressedButton.tres" type="StyleBox" id=16]
[ext_resource path="res://Resources/Styles/NormalButton.tres" type="StyleBox" id=17]
[ext_resource path="res://Resources/Styles/HoverButton.tres" type="StyleBox" id=18]
[ext_resource path="res://Containers/PomodoroTimer.tscn" type="PackedScene" id=19]
[ext_resource path="res://Resources/Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=21]
[ext_resource path="res://Resources/Icons/dot.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=14]
size = 35
font_data = ExtResource( 13 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 21 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.298039, 0.298039, 0.298039, 0.313726 )
border_width_bottom = 3
border_color = Color( 0.227451, 0.752941, 0.905882, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.298039, 0.298039, 0.298039, 0.313726 )
border_width_left = 3
border_width_top = 2
border_color = Color( 0.176471, 0.176471, 0.176471, 0.490196 )

[sub_resource type="StyleBoxFlat" id=13]
content_margin_left = 25.0
bg_color = Color( 0, 0, 0, 0 )
border_width_bottom = 1
border_color = Color( 0.192157, 0.192157, 0.192157, 1 )
border_blend = true

[sub_resource type="Animation" id=6]
resource_name = "deploy"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DropDownMenu/MenuContainerPanel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -300, 93 ), Vector2( 0, 93 ) ]
}

[node name="PrincipalScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.380392, 0.439216, 0.529412, 1 )

[node name="TopBar" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="TopBar"]
anchor_right = 1.0
margin_bottom = 91.0
mouse_filter = 2

[node name="HSeparator" type="HSeparator" parent="TopBar"]
anchor_right = 1.0
margin_top = 89.0
margin_bottom = 93.0
custom_styles/separator = ExtResource( 1 )

[node name="Greeting" type="Label" parent="TopBar"]
margin_left = 106.0
margin_top = 10.0
margin_right = 280.0
margin_bottom = 72.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "¡Hola, !"
valign = 1

[node name="Title" type="Label" parent="TopBar"]
visible = false
margin_left = 106.0
margin_top = 15.0
margin_right = 512.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 14 )
text = "Lista de tareas:"
valign = 1

[node name="DropDownMenu" type="Button" parent="TopBar"]
margin_left = 19.0
margin_top = 18.0
margin_right = 79.0
margin_bottom = 72.0
custom_styles/hover = ExtResource( 18 )
custom_styles/pressed = ExtResource( 16 )
custom_styles/focus = ExtResource( 15 )
custom_styles/normal = ExtResource( 17 )
icon = ExtResource( 3 )
icon_align = 1

[node name="TasksLists" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MoTasksListContainerPanel" parent="TasksLists" instance=ExtResource( 12 )]
visible = false

[node name="TuTasksListContainerPanel" parent="TasksLists" instance=ExtResource( 12 )]
visible = false

[node name="WeTasksListContainerPanel" parent="TasksLists" instance=ExtResource( 12 )]
visible = false

[node name="ThTasksListContainerPanel" parent="TasksLists" instance=ExtResource( 12 )]
visible = false

[node name="FrTasksListContainerPanel" parent="TasksLists" instance=ExtResource( 12 )]
visible = false

[node name="SaTasksListContainerPanel" parent="TasksLists" instance=ExtResource( 12 )]
visible = false

[node name="SuTasksListContainerPanel" parent="TasksLists" instance=ExtResource( 12 )]
visible = false

[node name="Pomodoro" type="Node" parent="."]

[node name="TimerContainer" type="Panel" parent="Pomodoro"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 8 )

[node name="PomodoroTimer" parent="Pomodoro/TimerContainer" instance=ExtResource( 19 )]
margin_top = 15.0
margin_bottom = 15.0

[node name="DropDownMenu" type="Node" parent="."]

[node name="MenuContainerPanel" type="Panel" parent="DropDownMenu"]
anchor_bottom = 1.0
margin_left = -300.0
margin_top = 93.0
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="DropDownMenu/MenuContainerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5

[node name="TasksList" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 33.0
custom_constants/hseparation = 5
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
text = "Lista de tareas"
icon = ExtResource( 7 )
align = 0

[node name="Monday" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
visible = false
margin_top = 38.0
margin_right = 300.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Lunes"
icon = ExtResource( 22 )
align = 0

[node name="Tuesday" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
visible = false
margin_top = 70.0
margin_right = 300.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Martes"
icon = ExtResource( 22 )
align = 0

[node name="Wednesday" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
visible = false
margin_top = 102.0
margin_right = 300.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Miércoles"
icon = ExtResource( 22 )
align = 0

[node name="Thursday" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
visible = false
margin_top = 134.0
margin_right = 300.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Jueves"
icon = ExtResource( 22 )
align = 0

[node name="Friday" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
visible = false
margin_top = 166.0
margin_right = 300.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Viernes"
icon = ExtResource( 22 )
align = 0

[node name="Saturday" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
visible = false
margin_top = 198.0
margin_right = 300.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Sábado"
icon = ExtResource( 22 )
align = 0

[node name="Sunday" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
visible = false
margin_top = 230.0
margin_right = 300.0
margin_bottom = 257.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "Domingo"
icon = ExtResource( 22 )
align = 0

[node name="Reminders" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
margin_top = 38.0
margin_right = 300.0
margin_bottom = 71.0
custom_constants/hseparation = 5
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
text = "Recordatorios"
icon = ExtResource( 6 )
align = 0

[node name="Timers" type="Button" parent="DropDownMenu/MenuContainerPanel/VBoxContainer"]
margin_top = 76.0
margin_right = 300.0
margin_bottom = 109.0
custom_constants/hseparation = 5
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 8 )
text = "Pomodoro"
icon = ExtResource( 11 )
align = 0

[node name="Animations" type="AnimationPlayer" parent="."]
anims/deploy = SubResource( 6 )

[connection signal="pressed" from="TopBar/DropDownMenu" to="." method="_on_DropDownMenu_pressed"]
[connection signal="pressed" from="DropDownMenu/MenuContainerPanel/VBoxContainer/TasksList" to="." method="_on_TasksList_pressed"]
[connection signal="pressed" from="DropDownMenu/MenuContainerPanel/VBoxContainer/Reminders" to="." method="_on_Reminders_pressed"]
[connection signal="pressed" from="DropDownMenu/MenuContainerPanel/VBoxContainer/Timers" to="." method="_on_Timers_pressed"]
[connection signal="animation_finished" from="Animations" to="." method="_on_Animations_animation_finished"]
